--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <section>
+      <a href="./1-gallery.html">Go to gallery</a>
+    </section>
+    <section>
+      <a href="./2-form.html">Go to form</a>
+    </section>
   </body>
 </html>
